syntax = "proto3";
// 定义包名
package proto;

// 定义 Req 消息结构
message PokerReq {
    int32  Uid      = 1;
    string Name     = 2;
}

message PokerRes {
    string Result   = 1;
    int32  Uid      = 2;
    string Name     = 3;
    int32  table    = 4;
}

// The greeting service definition.
service PokerServer {
    // Sends a greeting
    rpc GetPoker (PokerReq) returns (PokerRes) {}
}

